fix spacing... again

--- a/_sass/base/_page.scss
+++ b/_sass/base/_page.scss
@@ -139,7 +139,7 @@ h6 {
   h2.section-heading {
     font-size: 2.5rem;
     margin-top: 0;
-    margin-bottom: var(--space-gap);
+    margin-bottom: $space-grid-margin;
   }
   h3.section-subheading {
     font-size: var(--font-size-md);
