--- a/_sass/layout/_portfolio.scss
+++ b/_sass/layout/_portfolio.scss
@@ -20,7 +20,6 @@
 }
 
 .portfolio-grid {
-  margin-top: $space-grid-margin;
   row-gap: $space-grid-margin;
   position: relative;
   z-index: 1;
