--- a/_sass/layout/_references.scss
+++ b/_sass/layout/_references.scss
@@ -31,7 +31,6 @@
 }
 
 .references-grid {
-  margin-top: $space-grid-margin;
   row-gap: var(--space-gap-xl);
   position: relative;
   z-index: 1;
