--- a/_sass/layout/_testimonials.scss
+++ b/_sass/layout/_testimonials.scss
@@ -23,7 +23,6 @@
 
 .testimonials-carousel {
   position: relative;
-  margin-top: var(--space-gap-lg);
   padding-bottom: calc(var(--indicator-gap) + var(--space-gap-lg));
 
   .carousel-inner {
